add reference link

--- a/K Nearest Neighbourhood.ipynb
+++ b/K Nearest Neighbourhood.ipynb
@@ -17,6 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "参考：\n",
+    "https://www.cnblogs.com/eyeszjwang/articles/2429382.html  \n",
+    "https://zhuanlan.zhihu.com/p/23966698"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
